[package]
name = "renedown"
version = "0.3.0"
edition = "2024"
publish = false
default-run = "renedown-desktop"

[lib]
name = "renedown"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[[bin]]
name = "renedown-desktop"
path = "src/main.rs"

[package.metadata.android]
package = "org.mlm.renedown"
apk_name = "renedown"
target_sdk_version = 37
min_sdk_version = 26
build_targets = ["aarch64-linux-android"]
split_per_abi = true

[package.metadata.android.application]
label = "Renedown"
fullscreen = false

[dependencies]
repose-core = "0.21"
repose-ui = "0.21"
repose-material = "0.21"
repose-platform = "0.21"
repose-render-wgpu = "0.21"

pulldown-cmark = "0.13"

winit = "0.30"
env_logger = "0.11"
anyhow = "1"
log = "0.4"
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = { version = "30", features = ["webgpu", "webgl"] }

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
