[package]
name = "renedown"
version = "0.3.0"
edition = "2024"
publish = false
default-run = "renedown-desktop"

[lib]
name = "renedown"
crate-type = ["cdylib", "rlib"]

[features]
default = []

[[bin]]
name = "renedown-desktop"
path = "src/main.rs"

[package.metadata.android]
package = "org.mlm.renedown"
apk_name = "renedown"
target_sdk_version = 37
min_sdk_version = 26
build_targets = ["aarch64-linux-android"]
split_per_abi = true

[package.metadata.android.application]
label = "Renedown"
fullscreen = false

[dependencies]
repose-core = "0.22"
repose-ui = "0.22"
repose-material = "0.22"
repose-platform = "0.22"
repose-render-wgpu = "0.22"
repose-text = { version = "0.22", default-features = false }
# repose-core = { path = "../repose/crates/repose-core" }
# repose-ui = { path = "../repose/crates/repose-ui" }
# repose-material = { path = "../repose/crates/repose-material" }
# repose-platform = { path = "../repose/crates/repose-platform" }
# repose-render-wgpu = { path = "../repose/crates/repose-render-wgpu" }
# repose-text = { path = "../repose/crates/repose-text", default-features = false, features = ["basic", "monospace"] }

pulldown-cmark = "0.13"

winit = "0.30"
env_logger = "0.11"
anyhow = "1"
log = "0.4"
syntect = { version = "5.3", default-features = false, features = [
    "default-fancy",
] }

# rlobkit-dialogs = { path = "../rlobkit/rlobkit-dialogs" }
rlobkit-dialogs = "0.4"
flume = "0.12"
futures-lite = "2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "1"
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = { version = "30", features = ["webgpu", "webgl"] }

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
